@@ -66,6 +66,7 @@ Data Changes:
 - Physical adepts can now take any of the special Awakened type qualities from Forbidden Arcana to be consistent with Aware and Explorers being able to take those as well. This does not mean all players should be allowed to take any of these qualities for adepts, but rather that because the rulebooks are silent on who can and cannot take these qualities, Chummer will technically allow players to take them so that GMs can make case-by-case decisions on the matter.
 - Lingos listed in the core rulebook have been added to all appropriate language skills' suggested specializations list.
 - Internal SmartCam and Synthlink costs are now properly double the cost of whatever they are put into.
+- Drug grades have been added for regular drugs. Currently, they are available as plugins for gear entries that can have drug grades, which is a cumbersome solution, but it works.
 
 Changed/New Strings:
 - LimitCondition_SoldierParagon
